add social icon and form validation

--- a/index.html
+++ b/index.html
@@ -1,179 +1,257 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Portfolio</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="main-container">
-        <header class="nav-header">
-            <!-- logo image added in the background using css -->
-            <!-- toggle menu to be implemented -->
-            <nav class="nav-bar">
-                <a href="#">
-                    <img class="toggle-menu-icon" src="res-icons/ic_menu.svg" alt="toggle menu hamburger icon">
-                </a>
-            </nav>
+      <header class="nav-header">
+        <!-- logo image added in the background using css -->
+        <!-- toggle menu to be implemented -->
+        <nav class="nav-bar">
+          <a href="#">
+            <img
+              class="toggle-menu-icon"
+              src="res-icons/ic_menu.svg"
+              alt="toggle menu hamburger icon"
+            />
+          </a>
+        </nav>
+      </header>
+      <!-- main intro section -->
+      <section class="intro">
+        <header>
+          <h2 class="section-header">Ram Kumar Karuppusamy</h2>
+          <p class="section-content">
+            Hello! I am a full-stack web developer.I can build responsive
+            websites. Please look through my previous projects <br />If you like
+            my work and want to hire me for projects, please contact me
+          </p>
         </header>
-        <!-- main intro section -->
-        <section class="intro">
-            <header>
-                <h2 class="section-header">Ram Kumar Karuppusamy</h2>
-                <p class="section-content">Hello! I am a full-stack web developer.I can build responsive websites.
-                    Please look through my
-                    previous projects <br>If you like my work and want to hire me for projects, please contact me</p>
-            </header>
-            <button class="button-generic">Start Collaboration</button>
-            <!-- design art added in the background using css -->
-        </section>
-        <!-- porjects information section -->
-        <section class="projects">
-            <h2 class="section-header">Projects</h2>
-            <div class="projects-container">
-                <!-- individual project tile -->
-                <div class="project-tile">
-                    <img src="res-images/Rectangle 21.png" alt="open laptop top view" class="project-thumbnail">
-                    <div class="project-details">
-                        <h3 class="project-title">Project 1</h3>
-                        <ul class="tech-item-list">
-                            <li class="tech-item">HTML/CSS</li>
-                            <li class="tech-item">Ruby on Rails</li>
-                            <li class="tech-item">Javascript</li>
-                        </ul>
-                        <button class="button-generic button-project">See this project</button>
-                    </div>
-                </div>
-                <!-- individual project tile -->
-                <div class="project-tile">
-                    <img src="res-images/Rectangle 22.png" alt="open laptop and a mobile" class="project-thumbnail">
-                    <div class="project-details">
-                        <h3 class="project-title">Project 2</h3>
-                        <ul class="tech-item-list">
-                            <li class="tech-item">HTML/CSS</li>
-                            <li class="tech-item">Ruby on Rails</li>
-                            <li class="tech-item">Javascript</li>
-                        </ul>
-                        <button class="button-generic button-project">See this project</button>
-                    </div>
-                </div>
-                <!-- individual project tile -->
-                <div class="project-tile">
-                    <img src="res-images/Rectangle 26.png" alt="open laptop tilted to right" class="project-thumbnail">
-                    <div class="project-details">
-                        <h3 class="project-title">Project 3</h3>
-                        <ul class="tech-item-list">
-                            <li class="tech-item">HTML/CSS</li>
-                            <li class="tech-item">Ruby on Rails</li>
-                            <li class="tech-item">Javascript</li>
-                        </ul>
-                        <button class="button-generic button-project">See this project</button>
-                    </div>
-                </div>
-                <!-- individual project tile -->
-                <div class="project-tile">
-                    <img src="res-images/Rectangle 27.png" alt="open laptop front view" class="project-thumbnail">
-                    <div class="project-details">
-                        <h3 class="project-title">Project 4</h3>
-                        <ul class="tech-item-list">
-                            <li class="tech-item">HTML/CSS</li>
-                            <li class="tech-item">Ruby on Rails</li>
-                            <li class="tech-item">Javascript</li>
-                        </ul>
-                        <button class="button-generic button-project">See this project</button>
-                    </div>
-                </div>
-                <!-- individual project tile -->
-                <div class="project-tile">
-                    <img src="res-images/Rectangle 46.png" alt="open laptop front view 2" class="project-thumbnail">
-                    <div class="project-details">
-                        <h3 class="project-title">Project 5</h3>
-                        <ul class="tech-item-list">
-                            <li class="tech-item">HTML/CSS</li>
-                            <li class="tech-item">Ruby on Rails</li>
-                            <li class="tech-item">Javascript</li>
-                        </ul>
-                        <button class="button-generic button-project">See this project</button>
-                    </div>
-                </div>
-                <!-- individual project tile -->
-                <div class="project-tile">
-                    <img src="res-images/Rectangle 47.png" alt="open laptop left side view" class="project-thumbnail">
-                    <div class="project-details">
-                        <h3 class="project-title">Project 6</h3>
-                        <ul class="tech-item-list">
-                            <li class="tech-item">HTML/CSS</li>
-                            <li class="tech-item">Ruby on Rails</li>
-                            <li class="tech-item">Javascript</li>
-                        </ul>
-                        <button class="button-generic button-project">See this project</button>
-                    </div>
-                </div>
+        <button class="button-generic">Start Collaboration</button>
+        <!-- design art added in the background using css -->
+      </section>
+      <!-- porjects information section -->
+      <section class="projects">
+        <h2 class="section-header">Projects</h2>
+        <div class="projects-container">
+          <!-- individual project tile -->
+          <div class="project-tile">
+            <img
+              src="res-images/Rectangle 21.png"
+              alt="open laptop top view"
+              class="project-thumbnail"
+            />
+            <div class="project-details">
+              <h3 class="project-title">Project 1</h3>
+              <ul class="tech-item-list">
+                <li class="tech-item">HTML/CSS</li>
+                <li class="tech-item">Ruby on Rails</li>
+                <li class="tech-item">Javascript</li>
+              </ul>
+              <button class="button-generic button-project">
+                See this project
+              </button>
             </div>
-        </section>
-        <!-- About me section -->
-        <section class="about-me">
-            <header>
-                <h2 class="section-header">About</h2>
-                <p class="section-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                    tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur.</p>
-                <button class="button-generic button-aboutme">Get my CV <img src="" alt=""></button>
-            </header>
-            <!-- skill set 1 -->
-            <div class="skillset skillset1">
-                <h4 class="skillset-header">Languages</h4>
-                <ul class="skill-list">
-                    <li class="skill-item">Javascript(ES5)</li>
-                    <li class="skill-item">Ruby</li>
-                    <li class="skill-item">HTML</li>
-                    <li class="skill-item">CSS</li>
-                </ul>
+          </div>
+          <!-- individual project tile -->
+          <div class="project-tile">
+            <img
+              src="res-images/Rectangle 22.png"
+              alt="open laptop and a mobile"
+              class="project-thumbnail"
+            />
+            <div class="project-details">
+              <h3 class="project-title">Project 2</h3>
+              <ul class="tech-item-list">
+                <li class="tech-item">HTML/CSS</li>
+                <li class="tech-item">Ruby on Rails</li>
+                <li class="tech-item">Javascript</li>
+              </ul>
+              <button class="button-generic button-project">
+                See this project
+              </button>
             </div>
-            <!-- skill set 2 -->
-            <div class="skillset skillset2">
-                <h4 class="skillset-header">Frameworks</h4>
-                <ul class="skill-list">
-                    <li class="skill-item">Bootstrap</li>
-                    <li class="skill-item">Ruby on Rails</li>
-                    <li class="skill-item">RSpec</li>
-                    <li class="skill-item">Capibara</li>
-                    <li class="skill-item">Selenium</li>
-                </ul>
+          </div>
+          <!-- individual project tile -->
+          <div class="project-tile">
+            <img
+              src="res-images/Rectangle 26.png"
+              alt="open laptop tilted to right"
+              class="project-thumbnail"
+            />
+            <div class="project-details">
+              <h3 class="project-title">Project 3</h3>
+              <ul class="tech-item-list">
+                <li class="tech-item">HTML/CSS</li>
+                <li class="tech-item">Ruby on Rails</li>
+                <li class="tech-item">Javascript</li>
+              </ul>
+              <button class="button-generic button-project">
+                See this project
+              </button>
             </div>
-            <!-- skill set 3 -->
-            <div class="skillset skillset3">
-                <h4 class="skillset-header">Skills</h4>
-                <ul class="skill-list">
-                    <li class="skill-item">CodeKit</li>
-                    <li class="skill-item">Codepen</li>
-                    <li class="skill-item">GitHub</li>
-                    <li class="skill-item">GitLab</li>
-                    <li class="skill-item">Terminal</li>
-                </ul>
+          </div>
+          <!-- individual project tile -->
+          <div class="project-tile">
+            <img
+              src="res-images/Rectangle 27.png"
+              alt="open laptop front view"
+              class="project-thumbnail"
+            />
+            <div class="project-details">
+              <h3 class="project-title">Project 4</h3>
+              <ul class="tech-item-list">
+                <li class="tech-item">HTML/CSS</li>
+                <li class="tech-item">Ruby on Rails</li>
+                <li class="tech-item">Javascript</li>
+              </ul>
+              <button class="button-generic button-project">
+                See this project
+              </button>
             </div>
-        </section>
-        <section class="contact">
-            <header>
-                <h2>Get Started</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
-                
-            </header>
-            <form action="https://formspree.io/f/mvoyeabj" method="post">
-                <input type="text" name="name" placeholder="Your name">
-                <input type="email" name="email" id="email" placeholder="Your email">
-                <textarea name="messages" id="messages"  rows="5" placeholder="Enter your message here"></textarea>
-                <button type="submit">start Collaboration</button>
-            </form>
-
-        </section>
+          </div>
+          <!-- individual project tile -->
+          <div class="project-tile">
+            <img
+              src="res-images/Rectangle 46.png"
+              alt="open laptop front view 2"
+              class="project-thumbnail"
+            />
+            <div class="project-details">
+              <h3 class="project-title">Project 5</h3>
+              <ul class="tech-item-list">
+                <li class="tech-item">HTML/CSS</li>
+                <li class="tech-item">Ruby on Rails</li>
+                <li class="tech-item">Javascript</li>
+              </ul>
+              <button class="button-generic button-project">
+                See this project
+              </button>
+            </div>
+          </div>
+          <!-- individual project tile -->
+          <div class="project-tile">
+            <img
+              src="res-images/Rectangle 47.png"
+              alt="open laptop left side view"
+              class="project-thumbnail"
+            />
+            <div class="project-details">
+              <h3 class="project-title">Project 6</h3>
+              <ul class="tech-item-list">
+                <li class="tech-item">HTML/CSS</li>
+                <li class="tech-item">Ruby on Rails</li>
+                <li class="tech-item">Javascript</li>
+              </ul>
+              <button class="button-generic button-project">
+                See this project
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- About me section -->
+      <section class="about-me">
+        <header>
+          <h2 class="section-header">About</h2>
+          <p class="section-content">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur.
+          </p>
+          <button class="button-generic button-aboutme">
+            Get my CV <img src="" alt="" />
+          </button>
+        </header>
+        <!-- skill set 1 -->
+        <div class="skillset skillset1">
+          <h4 class="skillset-header">Languages</h4>
+          <ul class="skill-list">
+            <li class="skill-item">Javascript(ES5)</li>
+            <li class="skill-item">Ruby</li>
+            <li class="skill-item">HTML</li>
+            <li class="skill-item">CSS</li>
+          </ul>
+        </div>
+        <!-- skill set 2 -->
+        <div class="skillset skillset2">
+          <h4 class="skillset-header">Frameworks</h4>
+          <ul class="skill-list">
+            <li class="skill-item">Bootstrap</li>
+            <li class="skill-item">Ruby on Rails</li>
+            <li class="skill-item">RSpec</li>
+            <li class="skill-item">Capibara</li>
+            <li class="skill-item">Selenium</li>
+          </ul>
+        </div>
+        <!-- skill set 3 -->
+        <div class="skillset skillset3">
+          <h4 class="skillset-header">Skills</h4>
+          <ul class="skill-list">
+            <li class="skill-item">CodeKit</li>
+            <li class="skill-item">Codepen</li>
+            <li class="skill-item">GitHub</li>
+            <li class="skill-item">GitLab</li>
+            <li class="skill-item">Terminal</li>
+          </ul>
+        </div>
+      </section>
+      <section class="contact">
+        <header>
+          <h2>Get Started</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna.
+          </p>
+        </header>
+        <form action="https://formspree.io/f/mvoyeabj" method="post">
+          <input
+            type="text"
+            name="name"
+            placeholder="Your name"
+            required
+            maxlength="30"
+          />
+          <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="Your email"
+            required
+          />
+          <textarea
+            name="messages"
+            id="messages"
+            rows="5"
+            placeholder="Enter your message here"
+            required
+            maxlength="300"
+          ></textarea>
+          <button type="submit">start Collaboration</button>
+        </form>
+      </section>
+      <footer class="social-links">
+        <a href="">
+          <img src="" alt="" />
+        </a>
+        <div class="link-container">
+          <div class="link-item"><a href=""></a></div>
+          <div class="link-item"><a href=""></a></div>
+          <div class="link-item"><a href=""></a></div>
+          <div class="link-item"><a href=""></a></div>
+          <div class="link-item"><a href=""></a></div>
+          <div class="link-item"><a href=""></a></div>
+        </div>
+      </footer>
     </div>
-</body>
-
+  </body>
 </html>
