create desktop version of intro section and add styling

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en">0
 
 <head>
   <meta charset="UTF-8" />
@@ -29,15 +29,20 @@
     </header>
     <!-- main intro section -->
     <section class="intro-section">
-      <header>
-        <h2 class="section-header">Ram Kumar Karuppusamy</h2>
-        <p class="section-content">
-          Hello! I am a full-stack web developer.I can build responsive
-          websites. Please look through my previous projects <br />If you like
-          my work and want to hire me for projects, please contact me
-        </p>
-      </header>
-      <button class="button-generic">Start Collaboration</button>
+      <section class="intro-section" id="#intro-section">
+        <div class="intro-container">
+          <header>
+            <h2 class="section-header">Ram Kumar Karuppusamy</h2>
+            <p class="section-content">
+              Hello! I am a full-stack web developer. I can build responsive
+              websites. Please look through my previous projects <br />If you like
+              my work and want to hire me for projects, please contact me
+            </p>
+            <button class="button-generic">Start Collaboration</button>
+            <div class="image-art-dot"></div>
+          </header>
+          <div class="image-art-right"></div>
+        </div>
       <!-- design art added in the background using css -->
     </section>
     <!-- porjects information section -->
