Style projects section for desktop version
Modify project tiles display grid for large screen
Add div placeholders in index.html for background images
Add background images in style.css according to design template

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">0
+<html lang="en">
 
 <head>
   <meta charset="UTF-8" />
@@ -28,29 +28,29 @@
       </nav>
     </header>
     <!-- main intro section -->
-    <section class="intro-section">
-      <section class="intro-section" id="#intro-section">
-        <div class="intro-container">
-          <header>
-            <h2 class="section-header">Ram Kumar Karuppusamy</h2>
-            <p class="section-content">
-              Hello! I am a full-stack web developer. I can build responsive
-              websites. Please look through my previous projects <br />If you like
-              my work and want to hire me for projects, please contact me
-            </p>
-            <button class="button-generic">Start Collaboration</button>
-            <div class="image-art-dot"></div>
-          </header>
-          <div class="image-art-right"></div>
-        </div>
+    <section class="intro-section" id="#intro-section">
+      <div class="intro-container">
+        <header>
+          <h2 class="section-header">Ram Kumar Karuppusamy</h2>
+          <p class="section-content">
+            Hello! I am a full-stack web developer. I can build responsive
+            websites. Please look through my previous projects. <br />If you like
+            my work and want to hire me for projects, please contact me
+          </p>
+          <button class="button-generic">Start Collaboration</button>
+          <div class="image-art-dot"></div>
+        </header>
+        <div class="image-art-right"></div>
+      </div>
       <!-- design art added in the background using css -->
     </section>
     <!-- porjects information section -->
     <section class="projects-section">
       <h2 class="section-header">Projects</h2>
       <div class="projects-container">
+        <div class="project-image-dot"></div>
         <!-- individual project tile -->
-        <div class="project-tile">
+        <div class="project-tile project-tile-1">
           <img src="res-images/Rectangle 21.png" alt="open laptop top view" class="project-thumbnail" />
           <div class="project-details">
             <h3 class="project-title">Project 1</h3>
@@ -65,7 +65,7 @@
           </div>
         </div>
         <!-- individual project tile -->
-        <div class="project-tile">
+        <div class="project-tile project-tile-2">
           <img src="res-images/Rectangle 22.png" alt="open laptop and a mobile" class="project-thumbnail" />
           <div class="project-details">
             <h3 class="project-title">Project 2</h3>
@@ -79,8 +79,9 @@
             </button>
           </div>
         </div>
+        <div class="project-image-art-1"></div>
         <!-- individual project tile -->
-        <div class="project-tile">
+        <div class="project-tile project-tile-3">
           <img src="res-images/Rectangle 26.png" alt="open laptop tilted to right" class="project-thumbnail" />
           <div class="project-details">
             <h3 class="project-title">Project 3</h3>
@@ -95,7 +96,7 @@
           </div>
         </div>
         <!-- individual project tile -->
-        <div class="project-tile">
+        <div class="project-tile project-tile-4">
           <img src="res-images/Rectangle 27.png" alt="open laptop front view" class="project-thumbnail" />
           <div class="project-details">
             <h3 class="project-title">Project 4</h3>
@@ -110,7 +111,7 @@
           </div>
         </div>
         <!-- individual project tile -->
-        <div class="project-tile">
+        <div class="project-tile project-tile-5">
           <img src="res-images/Rectangle 46.png" alt="open laptop front view 2" class="project-thumbnail" />
           <div class="project-details">
             <h3 class="project-title">Project 5</h3>
@@ -124,8 +125,10 @@
             </button>
           </div>
         </div>
+        <div class="project-image-art-2"></div>
+        <div class="project-image-art-3"></div>
         <!-- individual project tile -->
-        <div class="project-tile">
+        <div class="project-tile project-tile-6">
           <img src="res-images/Rectangle 47.png" alt="open laptop left side view" class="project-thumbnail" />
           <div class="project-details">
             <h3 class="project-title">Project 6</h3>
