--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </nav>
     </header>
     <!-- main intro section -->
-    <section class="intro-section" id="#intro-section">
+    <section class="intro-section" id="intro-section">
       <div class="intro-container">
         <header>
           <h2 class="section-header">Ram Kumar Karuppusamy</h2>
@@ -45,7 +45,7 @@
       <!-- design art added in the background using css -->
     </section>
     <!-- porjects information section -->
-    <section class="projects-section">
+    <section class="projects-section" id="projects-section">
       <h2 class="section-header">Projects</h2>
       <div class="projects-container">
         <div class="project-image-dot"></div>
@@ -145,7 +145,7 @@
       </div>
     </section>
     <!-- About me section -->
-    <section class="about-me-section">
+    <section class="about-me-section" id="about-me-section">
       <header>
         <h2 class="section-header">About</h2>
         <p class="section-content">
@@ -160,41 +160,45 @@
           Get my CV <img src="" alt="" />
         </button>
       </header>
-      <!-- skill set 1 -->
-      <div class="skillset skillset1">
-        <h4 class="skillset-header">Languages</h4>
-        <ul class="skill-list">
-          <li class="skill-item">Javascript(ES5)</li>
-          <li class="skill-item">Ruby</li>
-          <li class="skill-item">HTML</li>
-          <li class="skill-item">CSS</li>
-        </ul>
+      <div class="skillset-grid">
+        <!-- skill set 1 -->
+        <div class="skillset skillset1">
+          <h4 class="skillset-header">Languages</h4>
+          <ul class="skill-list">
+            <li class="skill-item">Javascript(ES5)</li>
+            <li class="skill-item">Ruby</li>
+            <li class="skill-item">HTML</li>
+            <li class="skill-item">CSS</li>
+          </ul>
+        </div>
+        <!-- skill set 2 -->
+        <div class="skillset skillset2">
+          <h4 class="skillset-header">Frameworks</h4>
+          <ul class="skill-list">
+            <li class="skill-item">Bootstrap</li>
+            <li class="skill-item">Ruby on Rails</li>
+            <li class="skill-item">RSpec</li>
+            <li class="skill-item">Capibara</li>
+            <li class="skill-item">Selenium</li>
+          </ul>
+        </div>
+        <!-- skill set 3 -->
+        <div class="skillset skillset3">
+          <h4 class="skillset-header">Skills</h4>
+          <ul class="skill-list">
+            <li class="skill-item">CodeKit</li>
+            <li class="skill-item">Codepen</li>
+            <li class="skill-item">GitHub</li>
+            <li class="skill-item">GitLab</li>
+            <li class="skill-item">Terminal</li>
+          </ul>
+        </div>
+        <div class="skillset-image-art"></div>
       </div>
-      <!-- skill set 2 -->
-      <div class="skillset skillset2">
-        <h4 class="skillset-header">Frameworks</h4>
-        <ul class="skill-list">
-          <li class="skill-item">Bootstrap</li>
-          <li class="skill-item">Ruby on Rails</li>
-          <li class="skill-item">RSpec</li>
-          <li class="skill-item">Capibara</li>
-          <li class="skill-item">Selenium</li>
-        </ul>
-      </div>
-      <!-- skill set 3 -->
-      <div class="skillset skillset3">
-        <h4 class="skillset-header">Skills</h4>
-        <ul class="skill-list">
-          <li class="skill-item">CodeKit</li>
-          <li class="skill-item">Codepen</li>
-          <li class="skill-item">GitHub</li>
-          <li class="skill-item">GitLab</li>
-          <li class="skill-item">Terminal</li>
-        </ul>
-      </div>
+
     </section>
     <!-- Contacts section -->
-    <section class="contact-me-section">
+    <section class="contact-me-section" id="contact-me-section">
       <header class="contact-header">
         <h2 class="section-header">Get Started</h2>
         <p class="section-content">
