add styling to social media links footer desktop version

--- a/index.html
+++ b/index.html
@@ -233,6 +233,7 @@
     <footer class="social-links">
       <a class="resume-link" href="#">
         <div>Get my Resume</div>
+        <div class="icon-placeholder"></div>
       </a>
       <!-- to do : update correct links for the portfolio -->
       <div class="link-container">
