add small tweaks to existing styling of social media icons

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <input class="form-item-input form-item-email" id="form-email" type="email" name="email" placeholder="Your email"
               required />
           </div>
-          <div class="form-item right">
+          <div class="form-item">
             <label for="form-message">Message</label>
             <textarea class="form-item-input form-textarea" id="form-message" name="message" rows="5" placeholder="Enter your message here..."
             required maxlength="300"></textarea>
@@ -255,7 +255,6 @@
         <a href="www.angelist.com">
           <img src="res-icons/ic_angellist-1.svg" alt="angellist icon white ">
         </a>
-
       </div>
     </footer>
   </div>
