tweak styling for intro section both desktop and mobile version

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <button class="button-generic">Start Collaboration</button>
           <div class="image-art-dot"></div>
         </header>
-        <div class="image-art-right"></div>
+        <div class="image-art-intro"></div>
       </div>
       <!-- design art added in the background using css -->
     </section>
