implement code-review 1 review comments
remove padding in projects section
media query switch to min-width attribute

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             required maxlength="300"></textarea>
           </div>
           
-          <button class="button-generic" type="submit">Start collaboration</button>
+          <button class="button-generic button-form-submit" type="submit">Start collaboration</button>
         </form>
       </div>
 
