add transition to nav menu and buttons

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             websites. Please look through my previous projects. <br />If you like
             my work and want to hire me for projects, please contact me
           </p>
-          <button class="button-generic">Start Collaboration</button>
+          <button class="button-generic button-intro">Start Collaboration</button>
           <div class="image-art-dot"></div>
         </header>
         <div class="image-art-intro"></div>
@@ -157,7 +157,7 @@
           pariatur.
         </p>
         <button class="button-generic button-aboutme">
-          Get my CV <img src="" alt="" />
+          Get my CV
         </button>
       </header>
       <div class="skillset-grid">
