--- a/index.html
+++ b/index.html
@@ -15,16 +15,17 @@
       <!-- logo image added in the background using css -->
       <!-- toggle menu to be implemented -->
       <nav class="nav-bar">
+        <a href="#">
+          <img class="toggle-menu-icon" src="res-icons/ic_menu.svg" alt="toggle menu hamburger icon" />
+        </a>
         <!-- menu to be replaced by toggle button menu in mobile version -->
-        <ul class="nav-list">
+        <ul class="nav-list invisible">
           <li class="nav-list-item"><a href="#intro-section">Hello</a></li>
           <li class="nav-list-item"><a href="#projects-section">Portfolio</a></li>
           <li class="nav-list-item"><a href="#about-me-section">About</a></li>
           <li class="nav-list-item"><a href="#contact-me-section">Contact</a></li>
         </ul>
-        <a href="#">
-          <img class="toggle-menu-icon" src="res-icons/ic_menu.svg" alt="toggle menu hamburger icon" />
-        </a>
+        
       </nav>
     </header>
     <!-- main intro section -->
@@ -258,6 +259,7 @@
       </div>
     </footer>
   </div>
+  <script src="scripts/index.js"></script>
 </body>
 
 </html>
