add javascript objects for projects,add new js files

--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
       <h2 class="section-header">Projects</h2>
       <div class="projects-container">
         <div class="project-image-dot"></div>
-        <!-- individual project tile -->
-        <div class="project-tile project-tile-1">
+        <!-- <div class="project-tile project-tile-1">
           <img src="res-images/Rectangle 21.png" alt="open laptop top view" class="project-thumbnail" />
           <div class="project-details">
             <h3 class="project-title">Project 1</h3>
@@ -66,8 +65,7 @@
               See this project
             </button>
           </div>
-        </div>
-        <!-- individual project tile -->
+        </div>        
         <div class="project-tile project-tile-2">
           <img src="res-images/Rectangle 22.png" alt="open laptop and a mobile" class="project-thumbnail" />
           <div class="project-details">
@@ -81,10 +79,9 @@
               See this project
             </button>
           </div>
-        </div>
-        <div class="project-image-art-1"></div>
-        <!-- individual project tile -->
-        <div class="project-tile project-tile-3">
+        </div> -->
+        <div class="project-image-art-1"></div>        
+        <!-- <div class="project-tile project-tile-3">
           <img src="res-images/Rectangle 26.png" alt="open laptop tilted to right" class="project-thumbnail" />
           <div class="project-details">
             <h3 class="project-title">Project 3</h3>
@@ -97,8 +94,7 @@
               See this project
             </button>
           </div>
-        </div>
-        <!-- individual project tile -->
+        </div>        
         <div class="project-tile project-tile-4">
           <img src="res-images/Rectangle 27.png" alt="open laptop front view" class="project-thumbnail" />
           <div class="project-details">
@@ -112,8 +108,7 @@
               See this project
             </button>
           </div>
-        </div>
-        <!-- individual project tile -->
+        </div>        
         <div class="project-tile project-tile-5">
           <img src="res-images/Rectangle 46.png" alt="open laptop front view 2" class="project-thumbnail" />
           <div class="project-details">
@@ -127,11 +122,10 @@
               See this project
             </button>
           </div>
-        </div>
+        </div> -->
         <div class="project-image-art-2"></div>
-        <div class="project-image-art-3"></div>
-        <!-- individual project tile -->
-        <div class="project-tile project-tile-6">
+        <div class="project-image-art-3"></div>        
+        <!-- <div class="project-tile project-tile-6">
           <img src="res-images/Rectangle 47.png" alt="open laptop left side view" class="project-thumbnail" />
           <div class="project-details">
             <h3 class="project-title">Project 6</h3>
@@ -144,7 +138,7 @@
               See this project
             </button>
           </div>
-        </div>
+        </div> -->
       </div>
     </section>
     <!-- About me section -->
