--- a/index.html
+++ b/index.html
@@ -256,6 +256,8 @@
     </footer>
   </div>
   <script src="scripts/index.js"></script>
+  <script src="scripts/modules/projectsobj.js" type="text/javascript"></script>
+  <script src="scripts/modules/projectlayout.js" type="text/javascript"></script>
 </body>
 
 </html>
