add popup js file to create mobile and desktop popups

--- a/index.html
+++ b/index.html
@@ -52,93 +52,9 @@
       <h2 class="section-header">Projects</h2>
       <div class="projects-container">
         <div class="project-image-dot"></div>
-        <!-- <div class="project-tile project-tile-1">
-          <img src="res-images/Rectangle 21.png" alt="open laptop top view" class="project-thumbnail" />
-          <div class="project-details">
-            <h3 class="project-title">Project 1</h3>
-            <ul class="tech-item-list">
-              <li class="tech-item">HTML/CSS</li>
-              <li class="tech-item">Ruby on Rails</li>
-              <li class="tech-item">Javascript</li>
-            </ul>
-            <button class="button-generic button-project">
-              See this project
-            </button>
-          </div>
-        </div>        
-        <div class="project-tile project-tile-2">
-          <img src="res-images/Rectangle 22.png" alt="open laptop and a mobile" class="project-thumbnail" />
-          <div class="project-details">
-            <h3 class="project-title">Project 2</h3>
-            <ul class="tech-item-list">
-              <li class="tech-item">HTML/CSS</li>
-              <li class="tech-item">Ruby on Rails</li>
-              <li class="tech-item">Javascript</li>
-            </ul>
-            <button class="button-generic button-project">
-              See this project
-            </button>
-          </div>
-        </div> -->
         <div class="project-image-art-1"></div>        
-        <!-- <div class="project-tile project-tile-3">
-          <img src="res-images/Rectangle 26.png" alt="open laptop tilted to right" class="project-thumbnail" />
-          <div class="project-details">
-            <h3 class="project-title">Project 3</h3>
-            <ul class="tech-item-list">
-              <li class="tech-item">HTML/CSS</li>
-              <li class="tech-item">Ruby on Rails</li>
-              <li class="tech-item">Javascript</li>
-            </ul>
-            <button class="button-generic button-project">
-              See this project
-            </button>
-          </div>
-        </div>        
-        <div class="project-tile project-tile-4">
-          <img src="res-images/Rectangle 27.png" alt="open laptop front view" class="project-thumbnail" />
-          <div class="project-details">
-            <h3 class="project-title">Project 4</h3>
-            <ul class="tech-item-list">
-              <li class="tech-item">HTML/CSS</li>
-              <li class="tech-item">Ruby on Rails</li>
-              <li class="tech-item">Javascript</li>
-            </ul>
-            <button class="button-generic button-project">
-              See this project
-            </button>
-          </div>
-        </div>        
-        <div class="project-tile project-tile-5">
-          <img src="res-images/Rectangle 46.png" alt="open laptop front view 2" class="project-thumbnail" />
-          <div class="project-details">
-            <h3 class="project-title">Project 5</h3>
-            <ul class="tech-item-list">
-              <li class="tech-item">HTML/CSS</li>
-              <li class="tech-item">Ruby on Rails</li>
-              <li class="tech-item">Javascript</li>
-            </ul>
-            <button class="button-generic button-project">
-              See this project
-            </button>
-          </div>
-        </div> -->
         <div class="project-image-art-2"></div>
         <div class="project-image-art-3"></div>        
-        <!-- <div class="project-tile project-tile-6">
-          <img src="res-images/Rectangle 47.png" alt="open laptop left side view" class="project-thumbnail" />
-          <div class="project-details">
-            <h3 class="project-title">Project 6</h3>
-            <ul class="tech-item-list">
-              <li class="tech-item">HTML/CSS</li>
-              <li class="tech-item">Ruby on Rails</li>
-              <li class="tech-item">Javascript</li>
-            </ul>
-            <button class="button-generic button-project">
-              See this project
-            </button>
-          </div>
-        </div> -->
       </div>
     </section>
     <!-- About me section -->
@@ -258,6 +174,7 @@
   <script src="scripts/index.js"></script>
   <script src="scripts/modules/projectsobj.js" type="text/javascript"></script>
   <script src="scripts/modules/projectlayout.js" type="text/javascript"></script>
+  <script src="scripts/modules/popup.js" type="text/javascript"></script>
 </body>
 
 </html>
